--- a/css/custom.css
+++ b/css/custom.css
@@ -142,6 +142,18 @@
 		font-family: 'Architects Daughter', cursive;
 	}
 
+    h1, h2, h3, h4, h5, h6, a{
+        font-family: 'Architects Daughter', cursive !important;
+    }
+
 	.lead p{
 		font-family: 'Architects Daughter', cursive !important;
 	}
+
+    .module-wrapper i{
+        color: green;
+    }
+
+    .module-wrapper span{
+        color: green;
+    }
